--- a/bluefish/po/fi.po
+++ b/bluefish/po/fi.po
@@ -5,14 +5,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bluefish gtk2-port\n"
-"POT-Creation-Date: 2004-11-25 10:39+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-11-25 12:34-0300\n"
 "PO-Revision-Date: 2003-12-06 14:24+0100\n"
 "Last-Translator: Juho Roukala <j.mr@luukku.com>\n"
 "Language-Team: Not a memeber <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: ../src/about.c:123
 msgid ""
@@ -38,7 +38,6 @@ msgstr ""
 "Tämä Bluefish-versio käännettiin seuraavien valintojen kanssa:\n"
 
 #: ../src/about.c:124
-#, fuzzy
 msgid ""
 "Project leader:\n"
 "  Olivier Sessink <olivier@bluefish.openoffice.nl>\n"
@@ -105,11 +104,18 @@ msgstr ""
 "  Olivier Sessink <olivier@bluefish.openoffice.nl>\n"
 "\n"
 "Tämän julkaisun kehittäjät:\n"
-"  Jim Hayward <jimhayward@linuxexperience.net>\n"
-"  Oskar Świda <swida@aragorn.pb.bialystok.pl>\n"
-"  Eugene Morenko(More) <more@irpin.com>\n"
+"  Olivier Sessink\n"
+"   <olivier@bluefish.openoffice.nl>\n"
+"  Jim Hayward\n"
+"   <jimhayward@linuxexperience.net>\n"
+"  Oskar Świda\n"
+"   <swida@aragorn.pb.bialystok.pl>\n"
+"  Eugene Morenko(More)\n"
+"   <more@irpin.com>\n"
+"  Alastair Porter\n"
+"   <alastair@linuxexperience.com>\n"
 "\n"
-"Aikaisempien julkaisuiden kehittäjät:\n"
+"Edellisten julkaisujen kehittäjät:\n"
 "  Chris Mazuc\n"
 "  Neil Millar\n"
 "  Gero Takke\n"
@@ -117,25 +123,45 @@ msgstr ""
 "  David Arno\n"
 "  Pablo De Napoli\n"
 "  Santiago Capel Torres\n"
-"  Rasmus Toftdahl Olesen <rto@pohldata.dk>\n"
-"  Roland Steinbach <roland@netzblick.de>\n"
-"  Christian Tellefsen <chris@tellefsen.net>\n"
+"  Rasmus Toftdahl Olesen\n"
+"   <rto@pohldata.dk>\n"
+"  Roland Steinbach\n"
+"   <roland@netzblick.de>\n"
+"  Christian Tellefsen\n"
+"   <chris@tellefsen.net>\n"
 "  Antti-Juhani Kaijanaho\n"
 "\n"
 "Dokumentaatio:\n"
-"  Alastair Porter <alastair@linuxexperience.com>\n"
-"  Daniel Blair <joecamel@realcoders.org>\n"
+"  Scott White\n"
+"   <wwsw3@earthlink.net>\n"
+"  Michèle Garoche\n"
+"   <michele.garoche@easyconnect.fr>\n"
+"  Anita Lewis\n"
+"   <ajreiki@highstream.net>\n"
+"  Alastair Porter\n"
+"   <alastair@linuxexperience.com>\n"
+"  Daniel Blair\n"
+"   <joecamel@realcoders.org>\n"
+"  Olivier Sessink\n"
+"   <olivier@bluefish.openoffice.nl>\n"
 "  Denny Reeh\n"
 "\n"
 "Pakettien ylläpitäjät:\n"
-"  Debian:   Davide Puricelli <evo@debian.org>\n"
-"  Redhat:   Matthias Haase <matthias_haase@bennewitz.com>\n"
-"  Mandrake: Todd Lyons <todd@mrball.net>\n"
+"  Debian:   Davide Puricelli\n"
+"   <evo@debian.org>\n"
+"  Redhat:   Matthias Haase\n"
+"   <matthias_haase@bennewitz.com>\n"
+"  Mandrake: Todd Lyons\n"
+"   <todd@mrball.net>\n"
+"  Fink: Michèle Garoche\n"
+"   <michele.garoche@easyconnect.fr>\n"
 "\n"
-"Jos tiedät jonkun puuttuvan ylläolevista listoista, kerro siitä meille\n"
+"Jos huomaat jonkun puuttuvan tästä listasta, kerro siitä meille\n"
 "<bluefish@bluefish.openoffice.nl>\n"
 "\n"
 "Kiitos kaikille, jotka auttoivat tämän ohjelman luomisessa.\n"
+
+
 
 #: ../src/about.c:185
 msgid ""
@@ -675,14 +701,14 @@ msgid "Previously: "
 msgstr "Ennen:"
 
 #: ../src/document.c:2412
-#, fuzzy, c-format
+#, c-format
 msgid "Move/rename %s to"
-msgstr "Siirrä/uudelleennimeä dokumentti"
+msgstr "Siirrä/uudelleennimeä %s"
 
 #: ../src/document.c:2412
-#, fuzzy, c-format
+#, c-format
 msgid "Save %s as"
-msgstr "Tallenna nimellä..."
+msgstr "Tallenna %s nimellä"
 
 #: ../src/document.c:2456 ../src/document.c:2471 ../src/document.c:2569
 #: ../src/document.c:3759 ../src/project.c:171
@@ -1511,14 +1537,12 @@ msgid "Paste"
 msgstr "Liitä"
 
 #: ../src/gui.c:1090
-#, fuzzy
 msgid "Find..."
-msgstr "Etsi"
+msgstr "Etsi..."
 
 #: ../src/gui.c:1092
-#, fuzzy
 msgid "Replace..."
-msgstr "Korvaa"
+msgstr "Korvaa..."
 
 #: ../src/gui.c:1095 ../src/preferences.c:1992
 msgid "Undo"
@@ -1600,6 +1624,55 @@ msgstr "kääntää toista mallia '%s': %s paikassa %d"
 #, c-format
 msgid "studying 2nd pattern '%s': %s"
 msgstr "lukee toista mallia '%s': %s"
+
+#: ../src/html2.c:554
+msgid "Cascading StyleSheet dialog"
+msgstr "Limitetty tyylisivu -dialogi"
+
+#: ../src/html2.c:574
+msgid "_Selector:"
+msgstr "_Valitsija:"
+
+#: ../src/html2.c:593
+msgid "_Property:"
+msgstr "_Ominaisuus:"
+
+#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
+#: ../src/html_form.c:894
+msgid "_Value:"
+msgstr "_Arvo:"
+
+#: ../src/html2.c:613
+msgid "Selector"
+msgstr "Valitsija:"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Property"
+msgstr "Ominaisuus"
+
+#: ../src/html2.c:613 ../src/html2.c:616
+msgid "Value"
+msgstr "Arvo"
+
+#: ../src/html2.c:631
+msgid " _Add "
+msgstr " _Lisää "
+
+#: ../src/html2.c:634
+msgid " _Update "
+msgstr " _Päivitä "
+
+#: ../src/html2.c:637
+msgid " _Delete "
+msgstr " P_oista "
+
+#: ../src/html2.c:893 ../src/html2.c:930
+msgid "_Style..."
+msgstr "_Tyyli..."
+
+#: ../src/html2.c:1087
+msgid "Bluefish: Select color"
+msgstr "Bluefish: Valitse väri"
 
 #: ../src/html.c:392
 msgid "Insert Time"
@@ -1994,55 +2067,6 @@ msgstr "K_ieli:"
 #: ../src/html.c:2112
 msgid "_Custom:"
 msgstr "_Mukautettu:"
-
-#: ../src/html2.c:554
-msgid "Cascading StyleSheet dialog"
-msgstr "Limitetty tyylisivu -dialogi"
-
-#: ../src/html2.c:574
-msgid "_Selector:"
-msgstr "_Valitsija:"
-
-#: ../src/html2.c:593
-msgid "_Property:"
-msgstr "_Ominaisuus:"
-
-#: ../src/html2.c:595 ../src/html_form.c:650 ../src/html_form.c:799
-#: ../src/html_form.c:894
-msgid "_Value:"
-msgstr "_Arvo:"
-
-#: ../src/html2.c:613
-msgid "Selector"
-msgstr "Valitsija:"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Property"
-msgstr "Ominaisuus"
-
-#: ../src/html2.c:613 ../src/html2.c:616
-msgid "Value"
-msgstr "Arvo"
-
-#: ../src/html2.c:631
-msgid " _Add "
-msgstr " _Lisää "
-
-#: ../src/html2.c:634
-msgid " _Update "
-msgstr " _Päivitä "
-
-#: ../src/html2.c:637
-msgid " _Delete "
-msgstr " P_oista "
-
-#: ../src/html2.c:893 ../src/html2.c:930
-msgid "_Style..."
-msgstr "_Tyyli..."
-
-#: ../src/html2.c:1087
-msgid "Bluefish: Select color"
-msgstr "Bluefish: Valitse väri"
 
 #: ../src/html_form.c:141
 msgid "Form"
@@ -3899,9 +3923,8 @@ msgid "Custom Dialo_g"
 msgstr "Muokattu dialo_gi"
 
 #: ../src/menu.c:2449
-#, fuzzy
 msgid "Custom Replace"
-msgstr "M_uokattu Etsi ja korvaa"
+msgstr "Muokattu korvaus"
 
 #: ../src/menu.c:2461
 msgid "_Replace:"
@@ -4796,174 +4819,4 @@ msgstr "Lähde:"
 msgid "Size:"
 msgstr "Koko:"
 
-#~ msgid "Save document as"
-#~ msgstr "Tallenna dokumentti nimellä"
 
-#~ msgid "Save changes to this untitled file before closing?"
-#~ msgstr ""
-#~ "Tallennetaanko muutokset tähän nimettömään tiedostoon ennen sulkemista?"
-
-#~ msgid "Search..."
-#~ msgstr "Etsi..."
-
-#~ msgid "Search and Replace..."
-#~ msgstr "Etsi ja korvaa..."
-
-#~ msgid "Do_n't Save"
-#~ msgstr "_Älä tallenna"
-
-#~ msgid "Failed to save the current project"
-#~ msgstr "Projektia ei voitu tallentaa"
-
-#~ msgid "default"
-#~ msgstr "oletus"
-
-#~ msgid "temp"
-#~ msgstr "väliaikainen"
-
-#~ msgid "/View/View Sidebar"
-#~ msgstr "/Näytä/Näytä sivupaneeli"
-
-#~ msgid "/Edit/Undo"
-#~ msgstr "/Muokkaa/Kumoa"
-
-#~ msgid "/Edit/Redo"
-#~ msgstr "/Muokkaa/Tee uudelleen"
-
-#~ msgid "/Document/Wrap"
-#~ msgstr "/Dokumentti/Katkaisu"
-
-#~ msgid "/Document/Line Numbers"
-#~ msgstr "/Dokumentti/Rivien numerointi"
-
-#~ msgid "/Document/Auto Close HTML tags"
-#~ msgstr "/Dokumentti/Automaattinen HTML-tagien sulku"
-
-#~ msgid "/View/View HTML Toolbar"
-#~ msgstr "/Näytä/Näytä HTML-työkalurivi"
-
-#~ msgid "/View/View Main Toolbar"
-#~ msgstr "/Näytä/Näytä päätyökalurivi"
-
-#~ msgid "/View/View Custom Menu"
-#~ msgstr "/Näytä/Näytä muotoiltava valikko"
-
-#~ msgid "/Document/Auto Indent"
-#~ msgstr "/Dokumentti/Automaattinen sisennys"
-
-#~ msgid "Sort by line number"
-#~ msgstr "Järjestä rivinumeron mukaan"
-
-#~ msgid "/Project/Save"
-#~ msgstr "/Projekti/Tallenna"
-
-#~ msgid "/Project/Save as..."
-#~ msgstr "/Projekti/Tallenna nimellä..."
-
-#~ msgid "/Project/Save & close"
-#~ msgstr "/Projekti/Tallenna & sulje"
-
-#~ msgid "/Project/Edit Project Options..."
-#~ msgstr "/Projekti/Muokkaa projektin valintoja..."
-
-#~ msgid "/View/View Left Panel"
-#~ msgstr "/Näytä/Näytä vasen paneeli"
-
-#~ msgid "/View/View _Left Panel"
-#~ msgstr "/Näytä/Näytä _vasen paneeli"
-
-#~ msgid "Initial left panel width"
-#~ msgstr "Sisäänrakennetun vasemman paneelin leveys"
-
-#~ msgid "Show left panel by default"
-#~ msgstr "Näytä vasen paneeli oletuksena"
-
-#~ msgid "/File/Open recen_t"
-#~ msgstr "/Tiedosto/Avaa _äskettäinen"
-
-#~ msgid "/Project/Open r_ecent"
-#~ msgstr "/Profjekti/Avaa _viimeisin"
-
-#~ msgid "This file has not been saved."
-#~ msgstr "Tätä tiedostoa ei ole tallennettu"
-
-#~ msgid "Your changes will be lost if you don't save them."
-#~ msgstr "Tekemäsi muutokset kadotetaan ellet tallenna niitä."
-
-#~ msgid "Filetype"
-#~ msgstr "Tiedostotyyppi"
-
-#~ msgid "Filefilter"
-#~ msgstr "Tiedostosuodin"
-
-#~ msgid "Filetypes (colon separated)"
-#~ msgstr "Tiedostotyypit (erota kaksoispisteellä)"
-
-#~ msgid "Browser"
-#~ msgstr "Selain"
-
-#~ msgid "%s = current filename"
-#~ msgstr "%s = tämänhetkinen tiedostonimi"
-
-#~ msgid "File subpattern #"
-#~ msgstr "Tiedoston alamalli #"
-
-#~ msgid "Line subpattern #"
-#~ msgstr "Rivin alamalli #"
-
-#~ msgid "Output subpattern #"
-#~ msgstr "Tulosteen alamalli #"
-
-#~ msgid "You already have a bookmark named %s!"
-#~ msgstr "Sinulla on jo kirjanmerkki, jonka nimi on %s!"
-
-#~ msgid "Do you want to open it?"
-#~ msgstr "Haluatko avata sen?"
-
-#~ msgid "Rename permanent bookmark"
-#~ msgstr "Uudelleennimeä pysyvä kirjanmerkki"
-
-#~ msgid "Rename temporary bookmark"
-#~ msgstr "Uudelleennimeä väliaikainen kirjanmerkki"
-
-#~ msgid "Rename"
-#~ msgstr "Uudelleennimeä"
-
-#~ msgid "Permanent"
-#~ msgstr "Pysyvä"
-
-#~ msgid "Add temporary bookmark"
-#~ msgstr "Lisää väliaikainen kirjanmerkki"
-
-#~ msgid "Delete all permanent bookmarks."
-#~ msgstr "Poista kaikki pysyvät kirjanmerkit."
-
-#~ msgid "Are you REALLY sure?"
-#~ msgstr "Oletko TODELLA varma?"
-
-#~ msgid "Add permanent bookmark"
-#~ msgstr "Lisää pysyvä kirjanmerkki"
-
-#~ msgid "/Bookmarks/tearoff1"
-#~ msgstr "/Kirjanmerkit/tearoff1"
-
-#~ msgid "/Bookmarks/Add _Temporary"
-#~ msgstr "/Kirjanmerkit/Lisää _väliaikainen"
-
-#~ msgid "/Bookmarks/Add _Permanent"
-#~ msgstr "/Kirjanmerkit/Lisää _pysyvä"
-
-#~ msgid "/Bookmarks/sep2"
-#~ msgstr "/Kirjanmerkit/sep2"
-
-#~ msgid "/Bookmarks/Delete All Temporar_y"
-#~ msgstr "/Kirjanmerkit/Poista kaikki v_äliaikaiset"
-
-#~ msgid "/Bookmarks/Delete All Per_manent"
-#~ msgstr "/Kirjanmerkit/Poista kaikki p_ysyvät"
-
-#~ msgid "/Project/_Close & save"
-#~ msgstr "/Projekti/_Sulje & tallenna"
-
-#~ msgid "/Project/Close & save"
-#~ msgstr "/Projekti/Sulje & tallenna"
